--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -3,3 +3,12 @@ spring.application.name= payment-service
 server.port= 9076
 
 spring.config.import= configserver:http://localhost:9070
+
+
+spring.activemq.broker-url=tcp://localhost:61616
+spring.jms.pub-sub-domain=true
+spring.activemq.packages.trusted=com.broker.activemq.entities,java.lang
+spring.activemq.in-memory=true
+spring.activemq.close-timeout=15
+spring.activemq.password=admin
+spring.activemq.user=admin
