--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -2,4 +2,4 @@ spring.application.name= payment-service
 
 server.port= 9076
 
-spring.config.import= configserver:http://localhost:9070
+spring.config.import= configserver:http://configserver:9070
